# manifold

./: .gitignore  main.py  pyproject.toml
experiments/: 01_adaptation.py  02_homeostat.py  03_oscillator.py  04_two_oscillators.py  05_plasticity.py  06_three_node_bridge.py  07_tile.py  09_v1_bridge.py  10b_rivalry.py  10c_necker_constraint.py  10c_necker_simple.py  10d_necker_animation.py  10e_hierarchical.py  10f_hierarchical_simple.py  10g_threelayer.py  10h_three_layer_animation.py  10i_replot.py  10i_topology_learning.py  10j_book.py  10k_book_to_pdf.py  10l_unified.py  10m_replot.py  10m_unified_hierarchy.py  10n_unified_topology.py  10p_jax_simple.py  10q_jax_compile.py  10r_validate_compiler.py  10s_sensitivity.py  10t_coalescence.py  10z_animate_all.py
manifold/: __init__.py  animate.py  book.py  core.py  dynamics.py  jax_compile.py  manifold.py  networks.py  plot.py  transforms.py
