[project]
name = "manifold"
version = "0.0.1"
description = "generalized adaptive learning"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "matplotlib",
  "ipdb>=0.13.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["manifold"]
